# schedule_parser

./: .gitignore  analyze.py  clusters.py  google_calendar.py  main.py  pyproject.toml
docs/: student_camp_schedule.ics  Программа Студкемпа Яндекса в МФТИ25.docx  Студкемп в МФТИ_ о внеучебных мероприятиях .docx
